# python-repository-template

./: .bumpversion.toml  .pre-commit-config.yaml  .taplo.toml  .tombi.toml  README.md  pyproject.toml
.github/: .templatesyncignore  renovate.json5
.github/labels/: labeler.yaml
.github/workflows/: bump-version.yaml  bump_version.yaml  ci.yaml  create_tag.yaml  lint_python.yaml  manage-pull-requests.yaml  sync-template.yaml
