[project]
name = "project-name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    { include-group = "lint" },
]
lint = [ "ruff==0.10.0" ]

[tool.ruff]
target-version = "py313"
line-length = 120
