[project]
name = "project-name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    { include-group = "lint" },
    "pre-commit>=4.2.0",
]
lint = [ "ruff>=0.11.13" ]

[tool.ruff]
target-version = "py313"
line-length = 120
